# NIR_system_Demo

./: CMakeLists.txt  README.md  spectrum_model.py
config/: thresholds.json
create_predictor/example/: spectrum_model.py
create_predictor/svr/: spectrum_model.py
data/: diesel_prop.csv  diesel_spec.csv
lower_computer/: Server.cpp  Server.h  main.cpp
upper_computer/: Client.cpp  Client.h  CryptoUtils.h  Database.cpp  Database.h  LibTorchPredictor.cpp  LibTorchPredictor.h  PredictionWorker.cpp  PredictionWorker.h  SpectrumPredictor.cpp  SpectrumPredictor.h  main.cpp
upper_computer/basic/: Client.cpp  Client.h  CryptoUtils.cpp  DataConversionUtils.cpp  DataConversionUtils.h  NetworkManager.cpp  NetworkManager.h  PredictionWorker.cpp  PredictionWorker.h  SystemMonitor.cpp  SystemMonitor.h  ZoomableChartView.h  log.cpp  log.h
upper_computer/predictor/basic/: feature_reduction.cpp  feature_reduction.h  feature_selection.cpp  feature_selection.h  pre_processing.cpp  pre_processing.h
upper_computer/predictor/final_predictor/example/: ExampleLibTorchPredictor.cpp  ExampleLibTorchPredictor.h  ExampleSpectrumPredictor.cpp  ExampleSpectrumPredictor.h
upper_computer/predictor/final_predictor/svr/: SVRLibTorchPredictor.cpp  SVRLibTorchPredictor.h  SVRSpectrumPredictor.cpp  SVRSpectrumPredictor.h
